  - Service ECA rules
- Entity Facade
  - View-entity fixes and testing, now most view-entity options work
  - Support entity-find.search-form-inputs element for form *-find fields
  - Automatic cache clearing for one, list (using RA cache), count caches
  - Entity extension
  - Entity audit-logging
  - Entity field encryption
  - Entity ECA rules
  - Automatically add columns if missing in table check

Notable features not yet implemented:

- Clean up JavaDoc/GroovyDoc comments and post to site
- XML Screens
  - Screen form AJAX and jQuery
  - Screen form field-layout support
  - Screen form client JS validation based on target transition service
    definition (define once, run on client and server)
  - Screen form-list pagination
  - Screen tree elements
  - Screen section-iterate pagination
  - Renderers for non-HTML output (XML, XSL-FO, CSV, etc, etc)
- Service Facade
  - Service runners for remote service calls (HTTP, JMS, RMI proxies)
  - Service runners for web service standards (XML-RPC, REST, JSON, etc)
  - Service mail handling (MCA rules)
  - Service async/scheduled max-retry in Quartz
- Entity Facade
  - Entity complex aliases in views
  - Database meta-data support for fks, indexes
  - Database meta-data check/report against entity definitions
- ArtifactExecutionFacade for artifact stack tracking
- Artifact Authorization, Tar-pitting based on configuration in db
- ServerHit and ServerHitBin tracking
- Visitor tracking
- Multi-tenant support (shared app server, separate databases)
- Web Tools UI for Cache, Scheduler, Entity Data UI, SQL/Script Run, etc

===========================================================================
Release 1.0-preview1 - 09 Feb 2011
===========================================================================

Release 1.0-preview1 is the first preview release of the Moqui Framework.

This first release includes a number of complete tools, implementation of