@@ -342,7 +342,7 @@ This Work includes contributions authored by David E. Jones, not as a
             <xs:attribute name="table-name" type="xs:string"/>
             <xs:attribute name="group-name" type="xs:string" use="optional"/>
             <xs:attribute name="sequence-bank-size" type="xs:string"/>
-            <xs:attribute name="enable-optimistic-lock" default="false" type="boolean"/>
+            <xs:attribute name="optimistic-lock" default="false" type="boolean"/>
             <xs:attribute name="no-update-stamp" default="false" type="boolean"/>
             <xs:attribute name="cache" default="false" type="cache-options"/>
         </xs:complexType>
